--- a/site/views/index.html
+++ b/site/views/index.html
@@ -14,19 +14,17 @@
 </head>
 <body class="home">
     <header>
-        <div><img src="" alt="logo"></div>
-        <button></button>
+        <div><a href="/"><img src="../img/logo/logo-beerbar.png" alt="logo"></a></div>
 
         <nav>
-            <ul>
-                <li><a href="./index.html"></a>Home</li>
-                <li><a href="./index.html">Productos</a></li>
+            <ul> 
+                <li><a href="/productos">Productos</a></li>
                 <li><a href="#">Empresa</a></li>
                 <li><a href="#">Ayuda</a></li>
             </ul>
             <ul>
-                <li><a href="./login.html">Login</a></li>
-                <li><a href="./register.html">Registro</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Registro</a></li>
             </ul>
 
         </nav>
