--- a/site/views/index.html
+++ b/site/views/index.html
@@ -14,7 +14,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="home">
     <header>
         <div class="grid">
             <button class="burger">
@@ -40,18 +40,63 @@
             <ul>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Registro</a></li>
-            </ul>
+            </ul>   
 
-        </nav>
         <div class="t-f">
             <button><i class="fa-brands fa-twitter"></i></button>
             <button><i class="fa-brands fa-facebook-f"></i></button>
         </div>
+        </nav>
+    
     </header>
 
 
     <main>
-        <img src="/img/productos/D_NQ_NP_717441-MLA47094489878_082021-O.jpg" alt="">
+        <h1>PROMOCIONES</h1>
+        <section class="productos">
+            
+        <article>
+            <img src="/img/productos/birra1.jpg" alt="">
+            <div class="contenedor">
+            <h3>Session IPA</h3>
+            <p class="old">$1440</p>
+            <p class="precio">$1200 <small class="descuento">20%</small> <p>
+            </div>
+            
+            <button>Añadir al carrito</button>
+            </article>
+
+        <article>
+            <img src="/img/productos/birra1.jpg" alt="">
+            <div class="contenedor">
+            <h3>Session IPA</h3>
+            <p class="old">$1440</p>
+            <p class="precio">$1200 <small class="descuento">20%</small> <p>
+            </div>
+            <button>Añadir al carrito</button>
+        </article>
+
+        <article>
+            <img src="/img/productos/birra1.jpg" alt="">
+            <div class="contenedor">
+            <h3>Session IPA</h3>
+            <p class="old">$1440</p>
+            <p class="precio">$1200 <small class="descuento">20%</small> <p>
+            </div>
+            <button>Añadir al carrito</button>
+        </article>
+
+        <article>
+            <img src="/img/productos/birra1.jpg" alt="">
+            <div class="contenedor">
+            <h3>Session IPA</h3>
+            <p class="old">$1440</p>
+            <p class="precio">$1200 <small class="descuento">20%</small> <p>
+            </div>
+            <button>Añadir al carrito</button>
+        </article>
+    </section>
+        
     </main>
     <footer>
         <section>
@@ -65,7 +110,7 @@
             <article><a href="">Nuestros Productos</a> </article>
             <article><a href="">Empresa</a> </article>
             <article><a href=""> Ayuda</a></article>
-            <article><a href="/register.html">Registrarse</a></article>
+            <article><a href="/register">Registrarse</a></article>
         </section>
         <section class="contenedor_2">
             <article><a href=""> Terminos y condiciones</a></article>
