--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -2,6 +2,7 @@
 @import url('./general.css');
 @import url('./variables.css');
 @import url('./header.css');
+@import url('./main.css');
 @import url('./footer.css');
 @import url('./home.css');
 @import url('./carrito.css');
