--- a/site/public/css/variables.css
+++ b/site/public/css/variables.css
@@ -5,8 +5,12 @@
     --colorNaranja:rgb(219, 105, 12);
     --colorNaranjaClaro: #f8dda4;
     --colorNegro: black;
+    --colorBlanco:white ;
+    --colorGris: #585653;
+    --descuentos: rgb(219, 105, 12);
 
     /* Fuentes */
     --fuentePrincipal: 'Bebas Neue', cursive;
     --tamañoFuente: 25px;
+    --fuenteTitulares: 30px;
 }
