--- a/site/public/css/footer.css
+++ b/site/public/css/footer.css
@@ -8,8 +8,11 @@ footer section {
 }
 footer section p {
     display: flex;
-justify-content: space-around;
+justify-content: center;
 font-size: 20px;
+}
+footer section p i {
+    padding: 0 10px;
 }
 
 footer section article{
@@ -47,7 +50,19 @@ footer section:last-child {
 footer .copyright {
     font-weight: 100;
     padding: 20px 0;
-    
     display: flex;
     justify-content: start;
 }
+
+@media (min-width:769px) {
+    footer section p {
+        font-size: 30px;
+        justify-content: space-around;
+    }
+    footer .contenedor{
+        justify-items: center;
+    }
+    footer .contenedor_2 {
+        justify-items: center;
+    }
+    }
