--- a/site/views/index.html
+++ b/site/views/index.html
@@ -37,80 +37,84 @@
                 <li><a href="#">Empresa</a></li>
                 <li><a href="#">Ayuda</a></li>
             </ul>
-            <ul>
+            <ul class="user">
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Registro</a></li>
-            </ul>   
+            </ul>
 
-        <div class="t-f">
-            <button><i class="fa-brands fa-twitter"></i></button>
-            <button><i class="fa-brands fa-facebook-f"></i></button>
-        </div>
+            <div class="t-f">
+                <button><i class="fa-brands fa-twitter"></i></button>
+                <button><i class="fa-brands fa-facebook-f"></i></button>
+            </div>
         </nav>
-    
+
     </header>
 
 
     <main>
         <h1>PROMOCIONES</h1>
         <section class="productos">
-            
-        <article>
-            <img src="/img/productos/birra1.jpg" alt="">
-            <div class="contenedor">
-            <h3>Session IPA</h3>
-            <p class="old">$1440</p>
-            <p class="precio">$1200 <small class="descuento">20%</small> <p>
-            </div>
-            
-            <button>Añadir al carrito</button>
+
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+
+                <button>Añadir al carrito</button>
             </article>
 
-        <article>
-            <img src="/img/productos/birra1.jpg" alt="">
-            <div class="contenedor">
-            <h3>Session IPA</h3>
-            <p class="old">$1440</p>
-            <p class="precio">$1200 <small class="descuento">20%</small> <p>
-            </div>
-            <button>Añadir al carrito</button>
-        </article>
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
 
-        <article>
-            <img src="/img/productos/birra1.jpg" alt="">
-            <div class="contenedor">
-            <h3>Session IPA</h3>
-            <p class="old">$1440</p>
-            <p class="precio">$1200 <small class="descuento">20%</small> <p>
-            </div>
-            <button>Añadir al carrito</button>
-        </article>
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
 
-        <article>
-            <img src="/img/productos/birra1.jpg" alt="">
-            <div class="contenedor">
-            <h3>Session IPA</h3>
-            <p class="old">$1440</p>
-            <p class="precio">$1200 <small class="descuento">20%</small> <p>
-            </div>
-            <button>Añadir al carrito</button>
-        </article>
-    </section>
-        
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
+        </section>
+
     </main>
     <footer>
         <section>
             <p> <a href="https://twitter.com/"> <i class="fa-brands fa-twitter"></i></a>
-                
+
                 <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-               <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp-square"></i></a> 
+                <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp-square"></i></a>
             </p>
         </section>
         <section class="contenedor">
             <article><a href="">Nuestros Productos</a> </article>
             <article><a href="">Empresa</a> </article>
             <article><a href=""> Ayuda</a></article>
-            <article><a href="/register">Registrarse</a></article>
+            <article><a href="/register">Registrarse</a> / <a href="/login">Ingresar</a></article>
         </section>
         <section class="contenedor_2">
             <article><a href=""> Terminos y condiciones</a></article>
