--- a/site/views/index.html
+++ b/site/views/index.html
@@ -54,6 +54,28 @@
     <main>
         <h1>PROMOCIONES</h1>
         <section class="productos">
+            
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
+
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
 
             <article>
                 <img src="/img/productos/birra1.jpg" alt="">
@@ -64,6 +86,77 @@
                     <p>
                 </div>
 
+                <button>Añadir al carrito</button>
+            </article>
+
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
+
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
+
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
+        </section>
+
+        <h1>PRODUCTOS DESTACADOS</h1>
+        <section class="productos">
+
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+
+                <button>Añadir al carrito</button>
+            </article>
+
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
+                <button>Añadir al carrito</button>
+            </article>
+
+            <article>
+                <img src="/img/productos/birra1.jpg" alt="">
+                <div class="contenedor">
+                    <h3>Session IPA</h3>
+                    <p class="old">$1440</p>
+                    <p class="precio">$1200 <small class="descuento">20%</small>
+                    <p>
+                </div>
                 <button>Añadir al carrito</button>
             </article>
 
