--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -6,6 +6,6 @@
 @import url('./footer.css');
 @import url('./home.css');
 @import url('./carrito.css');
-@import url('./detalle.css');
+@import url('./detail.css');
 @import url('./register.css');
 @import url('./login.css');
