--- a/site/public/css/variables.css
+++ b/site/public/css/variables.css
@@ -7,6 +7,7 @@
     --colorNegro: black;
     --colorBlanco:white ;
     --colorGris: #585653;
+    --colorGrisClaro: #bfbebe8c;
     --descuentos: rgb(219, 105, 12);
 
     /* Fuentes */
