--- a/site/public/css/main.css
+++ b/site/public/css/main.css
@@ -26,10 +26,8 @@
     display: flex;
     justify-content: center;
     width: 170px;
-    
-    
 }
-.home main .productos article button {
+.home main .productos article button{
     display: flex;
     justify-content: center;
     margin: 0 auto;
@@ -40,6 +38,9 @@
     background-color: rgb(54, 49, 49);
     color: var(--colorBlanco);
     font-size: 16px;
+}
+.home main .productos article button a{
+    color: var(--colorBlanco);
 }
 .home main .productos article button:hover{
     background-color: var(--colorNaranja);
