terminda home detail y agregando productos.html

--- a/site/views/index.html
+++ b/site/views/index.html
@@ -16,19 +16,19 @@
 
 <body class="home">
     <header class="header">
-        <div class="grid">
+        <div class="flex">
             <div class="logo">
                 <a href="/"><img src="../img/logo/logo-beerbar.png" alt="logo"></a>
             </div>
-            <button class="search">
+            <div class="search">
                 <input type="text" placeholder="buscar productos">
                 <i class="fa-solid fa-magnifying-glass btn"></i>
-            </button>
+            </div>
             
             <div class="icons">
                 <button class="carrito">
-                <i class="fa-solid fa-cart-shopping"></i>
-            </button>
+                   <i class="fa-solid fa-cart-shopping"></i>
+                </button>
                 <button class="burger">
                     <i class="fa-solid fa-bars"></i>
                 </button>
@@ -38,22 +38,21 @@
         <nav>
             <ul>
                 <li><a href="/productos">Productos</a></li>
-                <li><a href="#">Empresa</a></li>
-                <li><a href="#">Ayuda</a></li>
+                <!-- <li><a href="#">Empresa</a></li>
+                <li><a href="#">Ayuda</a></li> -->
             </ul>
             <ul class="user">
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Registro</a></li>
             </ul>
 
-            <div class="t-f">
+            <!-- <div class="t-f">
                 <button><i class="fa-brands fa-twitter"></i></button>
                 <button><i class="fa-brands fa-facebook-f"></i></button>
-            </div>
+            </div> -->
         </nav>
 
     </header>
-
 
     <main>
         <h1>PROMOCIONES</h1>
@@ -67,7 +66,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button><a href="/detail">Ver mas</a></button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -78,7 +77,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -90,7 +89,7 @@
                     <p>
                 </div>
 
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -101,7 +100,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -112,7 +111,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -123,7 +122,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
         </section>
 
@@ -139,7 +138,7 @@
                     <p>
                 </div>
 
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -150,7 +149,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -161,7 +160,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -172,7 +171,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -183,7 +182,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
 
             <article>
@@ -194,7 +193,7 @@
                     <p class="precio">$1200 <small class="descuento">20%</small>
                     <p>
                 </div>
-                <button>Añadir al carrito</button>
+                <button><a href="/detail">Comprar</a></button>
             </article>
         </section>
 
@@ -210,20 +209,20 @@
         <section class="contenedor">
             <article><a href="">Nuestros Productos</a> </article>
             <article><a href="">Empresa</a> </article>
-            <article><a href=""> Ayuda</a></article>
-            <article><a href="/register">Registrarse</a> / <a href="/login">Ingresar</a></article>
-        </section>
-        <section class="contenedor_2">
             <article><a href=""> Terminos y condiciones</a></article>
             <article><a href="">Politicas de privacidad</a></article>
+            <!-- <article><a href="/register">Registrarse</a> / <a href="/login">Ingresar</a></article> -->
+        </section>
+        <section class="contenedor_2">
+            <article><a href="">ayuda</a></article>
             <article><a href="">Contacto</a></article>
-            <article><a href="">Franquicias</a></article>
-            <article><a href="">Happyhours</a></article>
+            <!-- <article><a href="">Franquicias</a></article>
+            <article><a href="">Happyhours</a></article> -->
         </section>
         <section>
             <article>Beber con moderacion. Prohibida su venta a menores de 18 años. No comparta el contenido con
                 menores. 2021 BEER&BAR</article>
-            <article class="copyright">Copyright © beer&bar</article>
+            <span class="copyright">Copyright © beer&bar</span>
         </section>
 
     </footer>
