--- a/site/public/css/detail.css
+++ b/site/public/css/detail.css
@@ -21,13 +21,16 @@
     border-radius: 10px; 
 }
 .detail main section article .contenedor{
-    background-color: var(--colorBlanco);
+    background-color: rgba(230, 230, 230, 0.6);
     padding: 10px;
     border: none;
     border-radius: 10px;
     margin-top: 5px;
 }
-.detail main section article p, .detail main section article h3{
+.detail main section article h3{
+    color: black;
+}
+.detail main section article p{
     color: var(--colorGris);
 }
 .detail main section article p:first-of-type{
@@ -76,6 +79,11 @@
 .detail main button{
     margin-bottom: 20px;
     width: 200px;
+}
+.detail main button a{
+    color: var(--colorBlanco);
+}
+.detail main section article .contenedor button:hover, .detail main button:hover{
     background-color: var(--colorNaranja);
 }
 .detail main .suggestion{
@@ -99,6 +107,9 @@
     justify-content: center;
     padding: 0;
     border: 0;
+}
+.detail main .suggestion article h3{
+    font-weight: 100;
 }
 .detail main .suggestion article div img{
     width: 100px;
