--- a/site/public/css/footer.css
+++ b/site/public/css/footer.css
@@ -1,6 +1,8 @@
 footer {
     background-color: var(--colorNaranja);
-    margin: 20px 0 0;
+    margin: 20px auto 0;
+    border-radius: 40px 40px 0 0;
+    width: 98%;
 }
 
 footer section {
@@ -8,44 +10,35 @@ footer section {
 }
 footer section p {
     display: flex;
-justify-content: center;
-font-size: 20px;
+    font-size: 30px;
+    justify-content: space-around;
 }
 footer section p i {
     padding: 0 10px;
 }
-
 footer section article{
     font-size: 18px;
     display: flex;
     justify-content: space-around;
-    
-    
 }
 footer .contenedor{
     display:grid;
     grid-template-columns: repeat(2,1fr);
-    /* grid-template-rows: repeat(2,1fr); */
-    justify-items: start;
-    margin:0 40px;
-    margin-top: 40px;
+    justify-items: center;
+    margin-top: 30px;
     border-bottom: 1px solid var(--colorNaranjaClaro);
-    
-    
-
+}
+footer .contenedor article{
+    margin-top: 5px;
 }
 footer .contenedor_2{
     display:grid;
     grid-template-columns: repeat(2,1fr);
-    /* grid-template-rows: repeat(2,1fr); */
-    justify-items: start;
-    margin:0 40px;
-    margin-top: 10px;
+    justify-items: center;
 }
 footer section:last-child {
-    font-weight: 700;
-    margin: 0 40px;
-    text-align: left;
+    font-weight: 600;
+    margin: 0 30px;
 }
 footer .copyright {
     font-weight: 100;
