--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -26,8 +26,8 @@ h1 {
 }
 
 h3 {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 28px;
+    font-weight: 500;
     padding-bottom: 15px;
     color: var(--colorBlanco);
 }
