--- a/site/public/css/header.css
+++ b/site/public/css/header.css
@@ -1,20 +1,21 @@
 .header {
-    padding-top: 20px;
-    
     background-color: #d6651fd1; 
-    width: 100%;
-    
+    width: 98%; 
+    height: 230px;
+    margin: 0 auto;
+    border-radius: 0 0 40px 40px;
 }
 
 .header .logo {
     display: flex;
     justify-content: center;
     align-content: center;
+    width: 50%;
+    max-width: 200px;
 }
 
-.header img {
-    width: 190px;
-    height: 90%;
+.header img{
+    width: 100%;
 }
 .header button {
     color: var(--colorBlanco);
@@ -32,50 +33,53 @@
     font-size: 40px;
 }
 
-.header .grid {
+.header .flex {
     display: flex;
-    margin: 0 15px;
-    padding: 20px 20px 0;
+    padding: 20px 30px 10px;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
-.header .grid .search input{
+.header .flex .search{
     display: none;
+}
+.header .flex .search input{
+    /* display: none; */
     font-size: 18px;
     padding: 7px;
     width: 300px;
     border-radius: 10px;
     border: none;
 }
-.header .grid .icons{
+.header .flex .icons{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
 }
-.header .grid .icons button:last-child{
+.header .flex .icons button:last-child{
     font-size: 40px;
     margin-left: 20px;
 }
-.header .t-f {
+/* .header .t-f {
     display: flex;
     justify-content: center;
     
-}
+} */
 
 .header nav {
-    margin: 20px;
-    text-align: left;
-    display: none;
-    justify-content: space-between;
+    display: block;
+    width: 89%;
+    margin: 0 auto;
 }
 
-.header nav ul {
-    padding-bottom: 10px;
-}
+/* .header nav ul {
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+} */
 
 .header nav ul li {
-    margin: 10px 0;
+    margin: 5px;
     
 }
 
@@ -85,43 +89,38 @@
     font-size: var(--tamañoFuente);
     
 }
-@media (min-width:769px) {
+@media (min-width:668px) {
+    .header{
+        height: 155px;
+    }
     .header img  {
         justify-content: center;
     }
     .header .burger{
         display: none;
     }
-    .header .grid .search{
+    .header .flex .search{
         display: flex;
         flex-wrap: wrap;
         align-items: center;
     }
-    .header .grid .search i{
+    .header .flex .search i{
         font-size: 20px;
-        transition: all 0.6s ease;
+        padding: 10px;
     }
-    .header .grid .search .btn{
-        width: 300px;
-        height: 20px;
-        text-align: center;
-        border-radius: 50%;
-        cursor: pointer
+    .header .flex .search input{
+        display: block;
     }
-    .header .grid .search i:hover input{
-        display: flex;
-    }
-    .header .grid .search input{
-        display: flex;
-        margin-right: 8px;
-    }
+
     .header nav {
         display: flex;
-        justify-items: center;
+        justify-content: space-between;
     }
     .header nav ul {
         display: flex;
-    }
+        flex-wrap: wrap;
+        align-items: center;
+     }
     .header nav ul li {
         margin: 0 5px;
     }
