--- a/site/public/css/products.css
+++ b/site/public/css/products.css
@@ -1,15 +1,15 @@
-.home main {
+.products main {
     margin: 0 auto;
     width: 90%;
 }
-.home main .productos {
+.products main .productos {
     color: var(--colorBlanco);
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
-.home main  .productos article {
+.products main  .productos article {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,15 +22,15 @@
     border: 1px;
     border-radius: 10px;
 }
-.home main .productos article{
-    box-shadow: inset 0px 1px 20px 14px rgb(85, 85, 85)
+.products main .productos article{
+    box-shadow: inset 0px 1px 20px 14px rgb(160, 160, 160)
 }
-.home main  .productos article img {
+.products main .productos article img {
     display: flex;
     justify-content: center;
     width: 80%;
 }
-.home main .productos article button{
+.products main .productos article button{
     display: flex;
     justify-content: center;
     margin: 0 auto;
@@ -42,28 +42,28 @@
     color: var(--colorBlanco);
     font-size: 16px;
 }
-.home main .productos article button a{
+.products main .productos article button a{
     color: var(--colorBlanco);
 }
-.home main .productos article button:hover{
+.products main .productos article button:hover{
     background-color: var(--colorNaranja);
 }
-.home main .productos article .old{
+.products main .productos article .old{
     text-decoration:line-through;
     font-size: 16px;
     color: rgb(182, 181, 181);
     display: flex;
     justify-items: start;
 }
-.home main .productos article .precio {
+.products main .productos article .precio {
 font-size: 24px;
 }
-.home main .productos article .descuento {
+.products main .productos article .descuento {
     color: var(--descuentos);
     margin: 10px;
     font-size: 20px;
 }
-.home main .productos article .contenedor {
+.products main .productos article .contenedor {
     display: flex;
     justify-content: start;
     flex-direction: column;
@@ -72,36 +72,36 @@ font-size: 24px;
 
 /* Tablet  */
 @media (min-width:460px) {
-    .home main  .productos article {
+    .products main  .productos article {
         width: 48%;
         height: 400px;
         margin: 10px 0;
     }
-    .home main  .productos article img{
+    .products main  .productos article img{
         width: 80%;
     }
 }
 
 @media (min-width:769px) {
-    .home main {
+    .products main {
         width: 83%;
         max-width: 1024px;
     }
-    .home main  .productos article {
+    .products main  .productos article {
         max-width: 300px;
         height: 430px;
 
     }
-    .home main  .productos article img{
+    .products main  .productos article img{
         width: 80%;
     }
-    .home main .productos article .old {
+    .products main .productos article .old {
         font-size: 16px;
     }
-    .home main .productos article .precio{
+    .products main .productos article .precio{
         font-size: 24px;
     }
-    .home main .productos article .descuento {
+    .products main .productos article .descuento {
         font-size: 20px;
     }
 }
