--- a/site/views/detail.html
+++ b/site/views/detail.html
@@ -14,19 +14,19 @@
 </head>
 <body class="detail">
     <header class="header">
-        <div class="grid">
+        <div class="flex">
             <div class="logo">
                 <a href="/"><img src="../img/logo/logo-beerbar.png" alt="logo"></a>
             </div>
-            <button class="search">
+            <div class="search">
                 <input type="text" placeholder="buscar productos">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
+                <i class="fa-solid fa-magnifying-glass btn"></i>
+            </div>
             
             <div class="icons">
                 <button class="carrito">
-                <i class="fa-solid fa-cart-shopping"></i>
-            </button>
+                   <i class="fa-solid fa-cart-shopping"></i>
+                </button>
                 <button class="burger">
                     <i class="fa-solid fa-bars"></i>
                 </button>
@@ -36,18 +36,18 @@
         <nav>
             <ul>
                 <li><a href="/productos">Productos</a></li>
-                <li><a href="#">Empresa</a></li>
-                <li><a href="#">Ayuda</a></li>
+                <!-- <li><a href="#">Empresa</a></li>
+                <li><a href="#">Ayuda</a></li> -->
             </ul>
             <ul class="user">
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Registro</a></li>
             </ul>
 
-            <div class="t-f">
+            <!-- <div class="t-f">
                 <button><i class="fa-brands fa-twitter"></i></button>
                 <button><i class="fa-brands fa-facebook-f"></i></button>
-            </div>
+            </div> -->
         </nav>
 
     </header>
@@ -100,20 +100,20 @@
         <section class="contenedor">
             <article><a href="">Nuestros Productos</a> </article>
             <article><a href="">Empresa</a> </article>
-            <article><a href=""> Ayuda</a></article>
-            <article><a href="/register">Registrarse</a> / <a href="/login">Ingresar</a></article>
-        </section>
-        <section class="contenedor_2">
             <article><a href=""> Terminos y condiciones</a></article>
             <article><a href="">Politicas de privacidad</a></article>
+            <!-- <article><a href="/register">Registrarse</a> / <a href="/login">Ingresar</a></article> -->
+        </section>
+        <section class="contenedor_2">
+            <article><a href="">ayuda</a></article>
             <article><a href="">Contacto</a></article>
-            <article><a href="">Franquicias</a></article>
-            <article><a href="">Happyhours</a></article>
+            <!-- <article><a href="">Franquicias</a></article>
+            <article><a href="">Happyhours</a></article> -->
         </section>
         <section>
             <article>Beber con moderacion. Prohibida su venta a menores de 18 años. No comparta el contenido con
                 menores. 2021 BEER&BAR</article>
-            <article class="copyright">Copyright © beer&bar</article>
+            <span class="copyright">Copyright © beer&bar</span>
         </section>
 
     </footer>
