--- a/site/views/carrito.html
+++ b/site/views/carrito.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/54d31be2c4.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CARRITO Beer Bar</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+    <div class="buscar">
+      <input type="text" placeholder="buscar" required>
+      <div class="btn">
+        <i class="fa-solid fa-magnifying-glass icon"></i>
+      </div>
+    </div>
     <header>
 
     </header>
@@ -14,7 +22,7 @@
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
