--- a/site/views/carrito.html
+++ b/site/views/carrito.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script src="https://kit.fontawesome.com/54d31be2c4.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -8,6 +9,7 @@
     <title>BEER BAR SHOP</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
     <header class="header">
         <div class="flex">
@@ -17,13 +19,13 @@
             <div class="buscar">
                 <input type="text" placeholder="buscar" required>
                 <div class="btn">
-                  <i class="fa-solid fa-magnifying-glass icon"></i>
+                    <i class="fa-solid fa-magnifying-glass icon"></i>
                 </div>
-              </div>
-            
+            </div>
+
             <div class="icons">
                 <button class="carrito">
-                   <i class="fa-solid fa-cart-shopping"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </button>
                 <button class="burger">
                     <i class="fa-solid fa-bars"></i>
@@ -40,6 +42,7 @@
             <ul class="user">
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Registro</a></li>
+                <li><a href="/carrito">Carrito</a> </li>
             </ul>
 
             <!-- <div class="t-f">
@@ -50,12 +53,63 @@
 
     </header>
 
-    <main>
-
-
-
-
-
+    <main class="main">
+        <div class="contGen">
+            <div class="contGrid">
+                <div class="producto">
+                    <div class="imgcCont">
+                        <img src="/img/productos/citra session.jpg" alt="citra session ipa">
+                    </div>
+                    <div class="contenido">
+                        <Strong>CITRA Session IPA</Strong>
+                        <p class="precio">$550</p>
+                        <button type="button" class="btnAñadir">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contGen">
+            <div class="contGrid">
+                <div class="producto">
+                    <div class="imgcCont">
+                        <img src="/img/productos/citra session.jpg" alt="citra session ipa">
+                    </div>
+                    <div class="contenido">
+                        <Strong>CITRA Session IPA</Strong>
+                        <p class="precio">$550</p>
+                        <button type="button" class="btnAñadir">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contGen">
+            <div class="contGrid">
+                <div class="producto">
+                    <div class="imgcCont">
+                        <img src="/img/productos/citra session.jpg" alt="citra session ipa">
+                    </div>
+                    <div class="contenido">
+                        <Strong>CITRA Session IPA</Strong>
+                        <p class="precio">$550</p>
+                        <button type="button" class="btnAñadir">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contGen">
+            <div class="contGrid">
+                <div class="producto">
+                    <div class="imgcCont">
+                        <img src="/img/productos/citra session.jpg" alt="citra session ipa">
+                    </div>
+                    <div class="contenido">
+                        <Strong>CITRA Session IPA</Strong>
+                        <p class="precio">$550</p>
+                        <button type="button" class="btnAñadir">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <section>
@@ -86,4 +140,5 @@
 
     </footer>
 </body>
+
 </html>
