--- a/site/public/css/carrito.css
+++ b/site/public/css/carrito.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 .main{
-    margin: 0px;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 90%;
@@ -13,59 +12,73 @@ main h2{
     margin:0px;
     text-align: center;
 }
-.main .contGrid{
+
+.main .contGen{
+    width: 100%;
+    height: 200px;
     display: flex;
-    margin: 0px;
+    border: solid 2px #000;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-    margin-left: 20%;
-    overflow: hidden;
+    position: relative;
+}
+.main .contGen .contGrid{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 .main .contGrid .producto{
-    margin-left: 0px;
-    width: 300px;
-    height: 600px;
-    border: solid 2px #000;
-    overflow: hidden;
-    border-radius: 20px;
-}
-.main .contGrid .producto .imgCont{
-    position: relative;
-    width: 300px;
-    height: 200px;
-    overflow: hidden;
-    border-bottom: solid 2px #000;
-    float: left;
-}
-.main .contGrid .producto .imgCont img{
+    width: 90%;
     display: flex;
-    margin-left: 0;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.main .contGrid .producto .imgcCont{
+    width: 50px;
+}
+.main .contGen .contGrid .producto .info{
+    display: flex;
+}
+.main .contGen .contGrid .producto .imgcCont img{
+    display: flex;
     object-fit: cover;
     width: 100%;
     height: 100%;
     align-items: center;
     justify-content: center;
-    position: relative;
-    float: left;
+
 }
 .main .contGrid .contenido{
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
+    justify-content: space-between;
+}   
 .main .contGrid .contenido strong{
     font-size: 20px;
 }
 .main .contGrid .contenido p{
     font-size: 25px;
 }
-.main .contGrid .contenido button{
+.main .contGrid .producto .info{
+    display: flex;
+    flex-direction: column;
+}
+.main .contGrid .producto .info button{
+    height: 45px;
     margin-top: 5px;
     cursor: pointer;
     border: solid 3px rgb(250, 71, 0);
     padding: 5px;
     background: rgb(255, 153, 0);
+}
+.main .contGrid .producto .info .trash{
+    position: absolute;
+top: -7px;
+right: -2px;
+padding: 10px;
 }
