--- a/site/public/css/normalize.css
+++ b/site/public/css/normalize.css
@@ -31,7 +31,11 @@ body {
    */
 
 main {
-    display: table-row;
+    margin: 0 auto;
+    width: 90%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /**
