--- a/site/views/carrito.html
+++ b/site/views/carrito.html
@@ -55,7 +55,7 @@
 
     <main class="main">
         <h2>Carrito (8)</h2>
-        <div class="contGen">
+        <section class="contGen">
             <div class="contGrid">
                 <div class="producto">
                     <div class="imgcCont">
@@ -63,13 +63,17 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
+                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                    </div>
+                    <div class="info">
                         <p class="precio">$550</p>
                         <button type="button" class="btnAñadir">- 1 +</i></button>
+                            <button class="trash"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="contGen">
+        </section>
+        <section class="contGen">
             <div class="contGrid">
                 <div class="producto">
                     <div class="imgcCont">
@@ -77,13 +81,17 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
+                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                    </div>
+                    <div class="info">
                         <p class="precio">$550</p>
-                        <button type="button" class="btnAñadir">- 1 +</button>
+                        <button type="button" class="btnAñadir">- 1 +</i></button>
+                            <button class="trash"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="contGen">
+        </section>
+        <section class="contGen">
             <div class="contGrid">
                 <div class="producto">
                     <div class="imgcCont">
@@ -91,13 +99,17 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
+                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                    </div>
+                    <div class="info">
                         <p class="precio">$550</p>
-                        <button type="button" class="btnAñadir">- 3 +</button>
+                        <button type="button" class="btnAñadir">- 1 +</i></button>
+                            <button class="trash"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="contGen">
+        </section>
+        <section class="contGen">
             <div class="contGrid">
                 <div class="producto">
                     <div class="imgcCont">
@@ -105,13 +117,17 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
+                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                    </div>
+                    <div class="info">
                         <p class="precio">$550</p>
-                        <button type="button" class="btnAñadir">- 1 +</button>
+                        <button type="button" class="btnAñadir">- 1 +</i></button>
+                            <button class="trash"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="contGen">
+        </section>
+        <section class="contGen">
             <div class="contGrid">
                 <div class="producto">
                     <div class="imgcCont">
@@ -119,12 +135,16 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
+                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                    </div>
+                    <div class="info">
                         <p class="precio">$550</p>
-                        <button type="button" class="btnAñadir">- 2 +</button>
+                        <button type="button" class="btnAñadir">- 1 +</i></button>
+                            <button class="trash"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         <section>
